...
                    .padding()
                    .background(Color.red)
                    .foregroundColor(.white)
                    .cornerRadius(10)
            }
            .padding(.horizontal)
            .accessibilityIdentifier("signOutButton")
        }
        .sheet(isPresented: $authViewModel.showEditProfile) {
            EditProfileView(profile: profile)
        }
        .sheet(isPresented: $showingTagEditor) {
            TagSelectionView(selectedTags: .init(
...
